# avl_tree

./: CMakeLists.txt  main.cpp  std_set.cpp
cmake/: build_flags.cmake
dep/: CMakeLists.txt
dep/fmt/: CMakeLists.txt
include/avl/: avl.hpp  node.hpp  spin.hpp  spine.hpp  utils.hpp
include/graphviz/: graphviz.hpp
include/set_comparison/: set.hpp  std_set.hpp
include/ui/: ui.hpp
src/: CMakeLists.txt
src/avl/: CMakeLists.txt
src/graphviz/: CMakeLists.txt
src/set_comparison/: CMakeLists.txt  set.cpp
src/ui/: CMakeLists.txt  ui.cpp
src/utils/: CMakeLists.txt  std.cpp
tests/e2e/: test.py
tests/unitests/: CMakeLists.txt  avl.cpp  config.hpp  node.cpp
